--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="ui-mobile-viewport ui-overlay-a" id="ui-page-top">
 <div data-role="page" id="main" class="jqm-demos ui-page ui-page-theme-a ui-page-footer-fixed ui-page-active">
 	<div data-role="header">
-		<h1>Contact us</h1>
+		<h1>Привет Contact us</h1>
 		</div>
 		
 		<div data-role="content">
