Добавлено левое слайд меню

--- a/index.html
+++ b/index.html
@@ -13,10 +13,47 @@
 <body class="ui-mobile-viewport ui-overlay-a" id="ui-page-top">
 <div data-role="page" id="main" class="jqm-demos ui-page ui-page-theme-a ui-page-footer-fixed ui-page-active">
 	<div data-role="header" data-position="fixed" class="jqm-header">
-		<a href="#" class="jqm-navmenu-link ui-nodisc-icon ui-alt-icon ui-btn-left ui-btn ui-icon-bars ui-btn-icon-notext ui-corner-all" data-role="button" role="button">Menu</a>
+		<a href="#nav-panel" class="jqm-navmenu-link ui-nodisc-icon ui-alt-icon ui-btn-left ui-btn ui-icon-bars ui-btn-icon-notext ui-corner-all" data-role="button" role="button">Menu</a>
 		<h1>Contact us</h1>
 		</div>
 		
+		 <div data-role="panel" data-display="overlay" data-theme="a" data-position="left" id="nav-panel" class="jqm-navmenu-panel">
+        <ul data-role="listview">
+            <li data-icon="delete"><a href="#" data-rel="close">Close menu</a></li>
+                <li><a href="#panel-responsive-page2">Accordion</a></li>
+                <li><a href="#panel-responsive-page2">Ajax Navigation</a></li>
+                <li><a href="#panel-responsive-page2">Autocomplete</a></li>
+                <li><a href="#panel-responsive-page2">Buttons</a></li>
+                <li><a href="#panel-responsive-page2">Checkboxes</a></li>
+                <li><a href="#panel-responsive-page2">Collapsibles</a></li>
+                <li><a href="#panel-responsive-page2">Controlgroup</a></li>
+                <li><a href="#panel-responsive-page2">Dialogs</a></li>
+                <li><a href="#panel-responsive-page2">Fixed toolbars</a></li>
+                <li><a href="#panel-responsive-page2">Flip switch toggle</a></li>
+                <li><a href="#panel-responsive-page2">Footer toolbar</a></li>
+                <li><a href="#panel-responsive-page2">Form elements</a></li>
+                <li><a href="#panel-responsive-page2">Grids</a></li>
+                <li><a href="#panel-responsive-page2">Header toolbar</a></li>
+                <li><a href="#panel-responsive-page2">Icons</a></li>
+                <li><a href="#panel-responsive-page2">Links</a></li>
+                <li><a href="#panel-responsive-page2">Listviews</a></li>
+                <li><a href="#panel-responsive-page2">Loader overlay</a></li>
+                <li><a href="#panel-responsive-page2">Navbar</a></li>
+                <li><a href="#panel-responsive-page2">Navbar, persistent</a></li>
+                <li><a href="#panel-responsive-page2">Pages</a></li>
+                <li><a href="#panel-responsive-page2">New</a></li>
+                <li><a href="#panel-responsive-page2">Popup</a></li>
+                <li><a href="#panel-responsive-page2">Radio buttons</a></li>
+                <li><a href="#panel-responsive-page2">Select</a></li>
+                <li><a href="#panel-responsive-page2">Slider, single</a></li>
+                <li><a href="#panel-responsive-page2">New</a></li>
+                <li><a href="#panel-responsive-page2">New</a></li>
+                <li><a href="#panel-responsive-page2">New</a></li>
+                <li><a href="#panel-responsive-page2">Text inputs & textarea</a></li>
+                <li><a href="#panel-responsive-page2">Transitions</a></li>
+        </ul>
+    </div>
+	
 		<div data-role="content">
 			С другой стороны рамки и место обучения кадров в значительной степени обуславливает создание систем массового участия. Значимость этих проблем настолько очевидна, что сложившаяся структура организации позволяет оценить значение существенных финансовых и административных условий. Повседневная практика показывает, что постоянный количественный рост и сфера нашей активности требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач. С другой стороны реализация намеченных плановых заданий в значительной степени обуславливает создание новых предложений. Повседневная практика показывает, что дальнейшее развитие различных форм деятельности позволяет выполнять важные задания по разработке форм развития. Таким образом консультация с широким активом позволяет оценить значение существенных финансовых и административных условий.
 С другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности требуют определения и уточнения новых предложений. Повседневная практика показывает, что новая модель организационной деятельности требуют от нас анализа форм развития. Таким образом рамки и место обучения кадров влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. Разнообразный и богатый опыт рамки и место обучения кадров требуют определения и уточнения модели развития. Задача организации, в особенности же новая модель организационной деятельности обеспечивает широкому кругу (специалистов) участие в формировании форм развития.
