--- a/index.html
+++ b/index.html
@@ -9,15 +9,35 @@
 </script>
 <script src="jquery/jquery.mobile-1.4.2.min.js">
 </script>
+<script>
+		$( document ).on( "pagecreate", "#main", function() {
+
+			$( document ).on( "swipeleft swiperight", "#main", function( e ) {
+				// We check if there is no open panel on the page because otherwise
+				// a swipe to close the left panel would also open the right panel (and v.v.).
+				// We do this by checking the data that the framework stores on the page element (panel: open).
+				
+				console.log(e.type);
+				if ( $( ".ui-page-active" ).jqmData( "panel" ) !== "open" ) {
+					if ( e.type === "swipeleft" ) {
+					
+						//$( "#nav-panel" ).panel( "open" );
+					} else if ( e.type === "swiperight" ) {
+						$( "#nav-panel" ).panel( "open" );
+					}
+				}
+			});
+		});
+    </script>
 </head>
 <body class="ui-mobile-viewport ui-overlay-a" id="ui-page-top">
 <div data-role="page" id="main" class="jqm-demos ui-page ui-page-theme-a ui-page-footer-fixed ui-page-active">
-	<div data-role="header" data-position="fixed" class="jqm-header">
+	<div data-role="header" data-position="fixed" class="jqm-header" data-tap-toggle="false">
 		<a href="#nav-panel" class="jqm-navmenu-link ui-nodisc-icon ui-alt-icon ui-btn-left ui-btn ui-icon-bars ui-btn-icon-notext ui-corner-all" data-role="button" role="button">Menu</a>
 		<h1>Contact us</h1>
 		</div>
 		
-		 <div data-role="panel" data-display="overlay" data-theme="a" data-position="left" id="nav-panel" class="jqm-navmenu-panel">
+		 <div data-role="panel" data-display="overlay" data-theme="a"  id="nav-panel" class="jqm-navmenu-panel">
         <ul data-role="listview">
             <li data-icon="delete"><a href="#" data-rel="close">Close menu</a></li>
                 <li><a href="#panel-responsive-page2">Accordion</a></li>
