--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		$( document ).on( "pagecreate", "#main", function() {
 
 			$( document ).on( "swipeleft swiperight", "#main", function( e ) {
+			e.stopImmediatePropagation();
 				// We check if there is no open panel on the page because otherwise
 				// a swipe to close the left panel would also open the right panel (and v.v.).
 				// We do this by checking the data that the framework stores on the page element (panel: open).
@@ -28,6 +29,7 @@
 				}
 			});
 		});
+		
     </script>
 </head>
 <body class="ui-mobile-viewport ui-overlay-a" id="ui-page-top">
@@ -92,5 +94,7 @@
 		<p>Copyright 2014 The jQuery Foundation</p>
 		</div>
 </div>
+<script>
+</script>
 </body>
 </html>
