--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 <link	rel="stylesheet" href="css/main.css" />
 <link	rel="stylesheet" href="css/owl.carousel.css" />
 
+<script src="phonegap.js"></script>
+
 <script src="jquery/jquery.js"></script>
 <script src="jquery/jquery.mobile-1.4.2.js"></script>
 <!--<script src="jquery/jquery.touchSwipe.min.js"></script>-->
