--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@
 			<!--http://mediacdn.siteheart.com/widget/sh/20140729173412/html/popup.html?widget_id=668014&sh_lang=ru&hostname=www.citrus.ua&uid=shi_2&sh_mode=chatpopup 
 			http://static.siteheart.com/widget/sh/20140916164314/html/popup.html?widget_id=668014&sh_lang=ru&hostname=m.citrus.ua&uid=shi_6&sh_mode=chatpopup
 			-->
+			
+			
 			<li><a href="/online.html" target="_blank"  data-role="button"  class="panel-menu-item"  ><i class="c_icon c_online"></i><div class="text">Онлайн консультант</div></a></li>
+			<li><a onclick="window.localStorage.clear();"  class="panel-menu-item"  ><div class="text">window.localStorage.clear();</div></a></li>
 			
         </ul>
     </div>
