--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <link	rel="stylesheet" href="css/owl.carousel.css" />
 
 <script src="phonegap.js"></script>
-<script src="PushNotification.js"></script>
-<script src="PushNotificationClass.js"></script>
+<script src="js/clean/PushNotification.js"></script>
+<script src="js/clean/PushNotificationClass.js"></script>
 <script src="jquery/jquery.js"></script>
 <script src="jquery/jquery.mobile-1.4.2.js"></script>
 <!--<script src="jquery/jquery.touchSwipe.min.js"></script>-->
