--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <link href="/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 <link href="/img/favicon.ico" rel="icon" type="image/x-icon" />
 
-<title>Интернет-магазин Цитрус — гаджеты и аксессуары. TEst</title>
+<title>Интернет-магазин Цитрус — гаджеты и аксессуары.</title>
 
 
 <link	rel="stylesheet" href="jquery/jquery.mobile-1.4.2.min.css" />
