--- a/index.html
+++ b/index.html
@@ -795,6 +795,28 @@
 </div>
 <!-- / Страница магазинов Конец-->
 
+<!-- Страница список магазинов  Начало -->
+<div data-role="page" id="shoplist-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
+	<div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
+		<a data-iconpos="notext" link="#nav-panel-shoplist-page" class="ui-noshadow cit_panel_href c_icon_contr" >			
+		<i class="c_icon c_menu"></i>			
+		</a>
+		<h1><div class="c_main_logo"></div></h1>
+		<div class="bnt-menu-panel-right">
+			<a link="#page-cart"  data-role="button"   class="ui-noshadow vclick_link c_icon_contr">			
+			<i class="c_icon c_basket"></i>			
+			</a>	
+		</div>	
+	</div>		
+ <div class="navPanelChild" id="nav-panel-shoplist-page"></div>
+		
+		<div data-role="content">		
+            <ul data-role="listview" data-theme="b" data-2inset="true" id="shoplist-listview">				
+			</ul>				
+		</div>		
+</div>
+<!-- / Страница список магазинов Конец-->
+
 <!-- Страница Онлайн консультанта  Начало -->
 <div data-role="page" id="online-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
 	<div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
