--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<li><a href="#page-cart"  data-role="button"   class="panel-menu-item"    ><i class="c_icon c_basket_simple"></i><div class="text">Корзина</div></a></li>
 			
 			<li><a href="http://club.citrus.ua" target="_blank"  data-role="button"   class="panel-menu-item"   ><i class="c_icon c_club"></i><div class="text">Цитрус клуб</div></a></li>
-			<li><a href="#maps-page"   data-role="button"   class="panel-menu-item"   ><i class="c_icon c_shops"></i><div class="text">Магазины Цитрус</div></a></li>
+			<li><a href="#shoplist-page"   data-role="button"   class="panel-menu-item"   ><i class="c_icon c_shops"></i><div class="text">Магазины Цитрус</div></a></li>
 			
 			
 			<li><a href="http://support.citrus.ua/" target="_blank"  data-role="button"   class="panel-menu-item"  ><i class="c_icon c_contactus"></i><div class="text">Обратная связь</div></a></li>
@@ -755,7 +755,7 @@
 			<div class="copy" style="color: rgb(118, 118, 118);margin-bottom: 20px">Звонки с мобильных - по тарифам вашего оператора, звонки со стационарных - бесплатно</div>
 			<div class="content-padding" style="margin-bottom:20px">
 			<div>Также вы можете посмотреть</div>
-				<div><a href="shops-page">Список наших магазинов</a></div>
+				<div><a href="shoplist-page">Список наших магазинов</a></div>
 			</div>
 			<hr>
 			<div class="copy_links copy">			
