--- a/index.html
+++ b/index.html
@@ -84,18 +84,18 @@
 			<li><a href="#news-page"   data-role="button"   class="panel-menu-item"   ><i class="c_icon c_news"></i><div class="text">Новости</div></a></li>
 			<li><a href="#page-cart"  data-role="button"   class="panel-menu-item"    ><i class="c_icon c_basket_simple"></i><div class="text">Корзина</div></a></li>
 			
-			<li><a href="http://club.citrus.ua" target="_blank"  data-role="button"   class="panel-menu-item"   ><i class="c_icon c_club"></i><div class="text">Цитрус клуб</div></a></li>
+			<li><a onclick="window.open('http://club.citrus.ua/', '_system', 'location=yes');return false;"  data-role="button"   class="panel-menu-item"   ><i class="c_icon c_club"></i><div class="text">Цитрус клуб</div></a></li>
 			<li><a href="#shoplist-page"   data-role="button"   class="panel-menu-item"   ><i class="c_icon c_shops"></i><div class="text">Магазины Цитрус</div></a></li>
 			
 			
-			<li><a href="http://support.citrus.ua/" target="_blank"  data-role="button"   class="panel-menu-item"  ><i class="c_icon c_contactus"></i><div class="text">Обратная связь</div></a></li>
+			<li><a onclick="window.open('http://support.citrus.ua/', '_system', 'location=yes');return false;"  data-role="button"   class="panel-menu-item"  ><i class="c_icon c_contactus"></i><div class="text">Обратная связь</div></a></li>
 			<!--http://mediacdn.siteheart.com/widget/sh/20140729173412/html/popup.html?widget_id=668014&sh_lang=ru&hostname=www.citrus.ua&uid=shi_2&sh_mode=chatpopup 
 			http://static.siteheart.com/widget/sh/20140916164314/html/popup.html?widget_id=668014&sh_lang=ru&hostname=m.citrus.ua&uid=shi_6&sh_mode=chatpopup
 			-->
 			
 			
-			<li><a href="/online.html" target="_blank"  data-role="button"  class="panel-menu-item"  ><i class="c_icon c_online"></i><div class="text">Онлайн консультант</div></a></li>
-			<li><a onclick="window.localStorage.clear();"  class="panel-menu-item"  ><div class="text">window.localStorage.clear();</div></a></li>
+			<li><a  onclick="window.open('http://m.citrus.ua/online.html', '_system', 'location=yes');return false;"  target="_blank"  data-role="button"  class="panel-menu-item"  ><i class="c_icon c_online"></i><div class="text">Онлайн консультант</div></a></li>
+
 			
         </ul>
     </div>
