local json fix4

--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
 			<div class="copy" style="color: rgb(118, 118, 118);margin-bottom: 20px">Звонки с мобильных - по тарифам вашего оператора, звонки со стационарных - бесплатно</div>
 			<div class="content-padding" style="margin-bottom:20px">
 			<div>Также вы можете посмотреть</div>
-				<div><a href="shoplist-page">Список наших магазинов</a></div>
+				<div><a href="#shoplist-page">Список наших магазинов</a></div>
 			</div>
 			<hr>
 			<div class="copy_links copy">			
