Fix tjis in  CheckSamePage function

--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
 	</div>		
 	<div data-role="panel" data-display="push" data-theme="b"  id="nav-panel" class="jqm-navmenu-panel" data-position-fixed="true">	
         <ul data-role="listview"  data-inset="true">            
-			<li><a href="#main" onclick="CheckHrefChange()"  data-role="button" class="panel-menu-item"  ><i class="c_icon c_home"></i><div class="text">Главная</div></a></li>
-			<li><a href="#products-list" onclick="CheckHrefChange()"   data-role="button"   class="panel-menu-item"   ><i class="c_icon c_catalog"></i><div class="text">Каталог товаров</div></a></li>
-			<li><a href="#search-page" onclick="CheckHrefChange()"    class="panel-menu-item"   data-role="button"  ><i class="c_icon c_search"></i><div class="text">Поиск</div></a></li>
-			<li><a href="#actions-page" onclick="CheckHrefChange()"    data-role="button"   class="panel-menu-item"   ><i class="c_icon c_action"></i><div class="text">Акции</div></a></li>
-			<li><a href="#news-page" onclick="CheckHrefChange()"    data-role="button"   class="panel-menu-item"   ><i class="c_icon c_news"></i><div class="text">Новости</div></a></li>
-			<li><a href="#page-cart" onclick="CheckHrefChange()"   data-role="button"   class="panel-menu-item"    ><i class="c_icon c_basket_simple"></i><div class="text">Корзина</div></a></li>
+			<li><a href="#main" onclick="CheckHrefChange(this)"  data-role="button" class="panel-menu-item"  ><i class="c_icon c_home"></i><div class="text">Главная</div></a></li>
+			<li><a href="#products-list" onclick="CheckHrefChange(this)"   data-role="button"   class="panel-menu-item"   ><i class="c_icon c_catalog"></i><div class="text">Каталог товаров</div></a></li>
+			<li><a href="#search-page" onclick="CheckHrefChange(this)"    class="panel-menu-item"   data-role="button"  ><i class="c_icon c_search"></i><div class="text">Поиск</div></a></li>
+			<li><a href="#actions-page" onclick="CheckHrefChange(this)"    data-role="button"   class="panel-menu-item"   ><i class="c_icon c_action"></i><div class="text">Акции</div></a></li>
+			<li><a href="#news-page" onclick="CheckHrefChange(this)"    data-role="button"   class="panel-menu-item"   ><i class="c_icon c_news"></i><div class="text">Новости</div></a></li>
+			<li><a href="#page-cart" onclick="CheckHrefChange(this)"   data-role="button"   class="panel-menu-item"    ><i class="c_icon c_basket_simple"></i><div class="text">Корзина</div></a></li>
 			
 			<li><a onclick="window.open('http://club.citrus.ua/', '_system', 'location=yes');return false;"  data-role="button"   class="panel-menu-item"   ><i class="c_icon c_club"></i><div class="text">Цитрус клуб</div></a></li>
-			<li><a href="#shoplist-page"  onclick="CheckHrefChange()"    data-role="button"   class="panel-menu-item"   ><i class="c_icon c_shops"></i><div class="text">Магазины Цитрус</div></a></li>
+			<li><a href="#shoplist-page"  onclick="CheckHrefChange(this)"    data-role="button"   class="panel-menu-item"   ><i class="c_icon c_shops"></i><div class="text">Магазины Цитрус</div></a></li>
 			
 			
 			<li><a onclick="window.open('http://support.citrus.ua/', '_system', 'location=yes');return false;"  data-role="button"   class="panel-menu-item"  ><i class="c_icon c_contactus"></i><div class="text">Обратная связь</div></a></li>
