Star to fix ios

--- a/index.html
+++ b/index.html
@@ -172,9 +172,10 @@
 <!-- Каталог товаров Начало -->
 <div data-role="page" id="products-list" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
 	<div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-		<a data-iconpos="notext" link="#nav-panel-products-list" class="ui-noshadow cit_panel_href c_icon_contr" >			
-		<i class="c_icon c_menu"></i>			
-		</a>
+		<a data-iconpos="notext"  class="ui-noshadow cit_panel_href BackButton" onclick="$.mobile.back();" >
+            <i class="c_icon c_back" ></i>
+            <span id="CatalogBack"></span>
+        </a>
 		<h1><div class="c_main_logo"></div></h1>
 		<div class="bnt-menu-panel-right">
 			
