--- a/index.html
+++ b/index.html
@@ -283,18 +283,18 @@
 
 <!-- Карточка товара Начало -->
 <div data-role="page" id="product-card" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
-	<div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-		<a data-iconpos="notext" link="#nav-panel-product-card" class="ui-noshadow cit_panel_href c_icon_contr" >			
-		<i class="c_icon c_menu "></i>			
-		</a>
-		<h1><div class="c_main_logo"></div></h1>
-		<div class="bnt-menu-panel-right">
-			<a link="#page-cart"  data-role="button"   class="ui-noshadow vclick_link c_icon_contr">			
-			<i class="c_icon c_basket"></i>			
-			</a>	
-		</div>
-	</div>		
- <div class="navPanelChild" id="nav-panel-product-card"></div>
+    <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
+        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton"onclick="$.mobile.back();" >
+            <i class="c_icon c_back" ></i>
+        </a>
+        <h1><div class="c_main_logo"></div></h1>
+        <div class="bnt-menu-panel-right">
+            <a link="#page-cart"  data-role="button"   class="ui-noshadow vclick_link c_icon_contr">
+                <i class="c_icon c_basket"></i>
+            </a>
+        </div>
+    </div>
+    <div class="navPanelChild" id="nav-panel-product-card"></div>
 		<div  id="product-card-content" data-role="content" >
 			<div class="content-padding">
 	             <h2 id="product-card-name">Название товара</h2>	
