Добавлена кросплатформенная функция назад

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 <!-- Каталог товаров Начало -->
 <div data-role="page" id="products-list" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href BackButton" onclick="go_back();" data-rel="back" >
             <i class="c_icon c_back" ></i>
             <span id="CatalogBack"></span>
         </a>
@@ -244,7 +244,7 @@
 		    <div data-role="navbar">
 		        <ul>
 		            <li><a onclick="FilterEnums.Clear();$.mobile.back();"> Сбросить</a></li>
-		            <li><a onclick="$.mobile.back();"> Применить</a></li>
+		            <li><a onclick="go_back();" data-rel="back"> Применить</a></li>
 
 		        </ul>
 		    </div><!-- /navbar -->
@@ -267,7 +267,7 @@
 		<div data-role="footer" data-position="fixed" id="filter-values-footer" >  
 		    <div data-role="navbar">
 		        <ul>
-		            <li><a onclick="$.mobile.back();"> Отмена</a></li>
+		            <li><a onclick="go_back();" data-rel="back"> Отмена</a></li>
 		            <li><a onclick="SaveSelectedEnums();"> ОК</a></li>
 
 		        </ul>
@@ -284,7 +284,7 @@
 <!-- Карточка товара Начало -->
 <div data-role="page" id="product-card" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="go_back();" data-rel="back" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -384,7 +384,7 @@
 <div data-role="page" id="page-cart" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
 	
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="go_back();" data-rel="back" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -417,7 +417,7 @@
 <!-- Оформление заказа Начало -->
 <div data-role="page" id="page-order" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="go_back();" data-rel="back" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -507,7 +507,7 @@
 <!-- Оформление предзаказа Начало -->
 <div data-role="page" id="page-preorder" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="go_back();" data-rel="back" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -597,7 +597,7 @@
 <!-- Страница поиска товаров Начало -->
 <div data-role="page" id="search-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
 	 <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="go_back();" data-rel="back" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -628,7 +628,7 @@
 <!-- Страница детальный текст Начало -->
 <div data-role="page" id="text-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="go_back();" data-rel="back" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -649,7 +649,7 @@
 <!-- Страница Авторизации  Начало -->
 <div data-role="page" id="login-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="go_back();" data-rel="back" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -671,7 +671,7 @@
 <!-- Страница ввода sms_code  Начало -->
 <div data-role="page" id="sms-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="go_back();" data-rel="back" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -695,7 +695,7 @@
 <!-- Страница новостей  Начало -->
 <div data-role="page" id="news-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="go_back();" data-rel="back" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -717,7 +717,7 @@
 <!-- Страница акций  Начало -->
 <div data-role="page" id="actions-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="go_back();" data-rel="back" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -784,7 +784,7 @@
 <!-- Страница магазинов  Начало -->
 <div data-role="page" id="maps-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="go_back();" data-rel="back" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -808,7 +808,7 @@
 <!-- Страница список магазинов  Начало -->
 <div data-role="page" id="shoplist-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="go_back();" data-rel="back" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -830,7 +830,7 @@
 <!-- Страница Онлайн консультанта  Начало -->
 <div data-role="page" id="online-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="go_back();" data-rel="back" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
