--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
@@ -172,7 +172,7 @@
 <!-- Каталог товаров Начало -->
 <div data-role="page" id="products-list" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow  BackButton" onclick="$.mobile.back();" >
             <i class="c_icon c_back" ></i>
             <span id="CatalogBack"></span>
         </a>
