--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link	rel="stylesheet" href="css/owl.carousel.css" />
 
     <script src="phonegap.js"></script>
+    <script src="js/clean/ga.js"></script>
     <script src="js/clean/PushNotification.js"></script>
     <script src="js/clean/PushNotificationClass.js"></script>
     <script src="jquery/jquery.js"></script>
