--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
             <li><a  onclick="window.open('http://m.citrus.ua/online.html', '_system', 'location=yes');return false;"  target="_blank"  data-role="button"  class="panel-menu-item"  ><i class="c_icon c_online"></i><div class="text">Онлайн консультант</div></a></li>
 
+            <li><a href="#debug"  data-role="button"   class="panel-menu-item"   ><i class="c_icon c_action"></i><div class="text">Debug</div></a></li>
 
         </ul>
     </div>
@@ -857,7 +858,17 @@
 <!-- / Страница router Конец-->
 
 
+<!-- Страница debug Начало -->
+<div data-role="page" id="debug" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
+    <div data-role="content" id="console" >
+
+    </div>
+</div>
+<!-- / Страница debug Конец-->
+
 <div data-role="dialog" id="timeout">Ошибка. Проверьте соединение с интернет ...</div>
+
+
 
 
 
