Refactor debug page

--- a/index.html
+++ b/index.html
@@ -860,6 +860,12 @@
 
 <!-- Страница debug Начало -->
 <div data-role="page" id="debug" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
+    <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
+        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+            <i class="c_icon c_back" ></i>
+        </a>
+        <h1><div class="c_main_logo"></div></h1>
+    </div>
     <div data-role="content" id="console" >
 
     </div>
