--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
             <h2>Спасибо!</h2>
             <div style="margin-bottom: 1rem;">Ваш заказ № B-<span id="order_done_page_order_id"></span> принят.</div>
             <div style="margin-bottom: 1rem;">Для уточнения наличия товара пожалуйста дождитесь звонка от менеджера call-центра.</div>
-            <a href="#main" class="btn ui-link"><button id="product-card-tel-btn" class="  btn big green_btn ui-btn ui-corner-all">Продолжить покупки</button></a>
+            <a href="#main" class="ui-link"><button id="product-card-tel-btn" class="  btn big green_btn ui-btn ui-corner-all">Продолжить покупки</button></a>
         </div>
         <hr>
         <div class="copy_links copy">
@@ -580,7 +580,7 @@
         <div class="content-padding">
             <h2>Спасибо!</h2>
             <div style="margin-bottom: 1rem;">Ваш предзаказ № <span id="order_done_page_preorder_id"></span> получен и отправлен в обработку! Мы свяжемся с Вами, как только товар появится в наличии.</div>
-            <a href="#main" class="btn ui-link"><button id="product-card-tel-btn" class="  btn big green_btn ui-btn ui-corner-all">Продолжить покупки</button></a>
+            <a href="#main" class="ui-link"><button id="product-card-tel-btn" class="  btn big green_btn ui-btn ui-corner-all">Продолжить покупки</button></a>
         </div>
         <hr>
         <div class="copy_links copy">
