Remove all citrus_hrefs on back buttons to fix bug

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 <!-- Карточка товара Начало -->
 <div data-role="page" id="product-card" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow c_icon_contr BackButton" onclick="$.mobile.back();" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -386,7 +386,7 @@
 <div data-role="page" id="page-cart" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
 
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow  c_icon_contr BackButton" onclick="$.mobile.back();" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -419,7 +419,7 @@
 <!-- Оформление заказа Начало -->
 <div data-role="page" id="page-order" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow  c_icon_contr BackButton" onclick="$.mobile.back();" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -509,7 +509,7 @@
 <!-- Оформление предзаказа Начало -->
 <div data-role="page" id="page-preorder" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow  c_icon_contr BackButton" onclick="$.mobile.back();" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -599,7 +599,7 @@
 <!-- Страница поиска товаров Начало -->
 <div data-role="page" id="search-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow  c_icon_contr BackButton" onclick="$.mobile.back();" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -630,7 +630,7 @@
 <!-- Страница детальный текст Начало -->
 <div data-role="page" id="text-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow  c_icon_contr BackButton" onclick="$.mobile.back();" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -651,7 +651,7 @@
 <!-- Страница Авторизации  Начало -->
 <div data-role="page" id="login-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow  c_icon_contr BackButton" onclick="$.mobile.back();" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -673,7 +673,7 @@
 <!-- Страница ввода sms_code  Начало -->
 <div data-role="page" id="sms-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow  c_icon_contr BackButton" onclick="$.mobile.back();" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -697,7 +697,7 @@
 <!-- Страница новостей  Начало -->
 <div data-role="page" id="news-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow  c_icon_contr BackButton" onclick="$.mobile.back();" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -719,7 +719,7 @@
 <!-- Страница акций  Начало -->
 <div data-role="page" id="actions-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow  c_icon_contr BackButton" onclick="$.mobile.back();" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -786,7 +786,7 @@
 <!-- Страница магазинов  Начало -->
 <div data-role="page" id="maps-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow  c_icon_contr BackButton" onclick="$.mobile.back();" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -810,7 +810,7 @@
 <!-- Страница список магазинов  Начало -->
 <div data-role="page" id="shoplist-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow  c_icon_contr BackButton" onclick="$.mobile.back();" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -832,7 +832,7 @@
 <!-- Страница Онлайн консультанта  Начало -->
 <div data-role="page" id="online-page" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow  c_icon_contr BackButton" onclick="$.mobile.back();" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
@@ -861,7 +861,7 @@
 <!-- Страница debug Начало -->
 <div data-role="page" id="debug" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href c_icon_contr BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow  c_icon_contr BackButton" onclick="$.mobile.back();" >
             <i class="c_icon c_back" ></i>
         </a>
         <h1><div class="c_main_logo"></div></h1>
