Added search button

--- a/index.html
+++ b/index.html
@@ -616,6 +616,7 @@
         <div style="padding:0 0.3rem;" id="search_contaner">
             <i class="c_icon search-input-icon"></i>
             <input type="text" class="search-input" id="search-page-search-input" name="password" id="search" value="" placeholder="Поиск">
+            <div class="s_button" id="seach-input-button">Искать</div>
             <i class="c_icon voice-input-icon"></i>
         </div>
 
