Disable debug page

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
             <li><a  onclick="window.open('http://m.citrus.ua/online.html', '_system', 'location=yes');return false;"  target="_blank"  data-role="button"  class="panel-menu-item"  ><i class="c_icon c_online"></i><div class="text">Онлайн консультант</div></a></li>
 
-            <li><a href="#debug"  data-role="button"   class="panel-menu-item"   ><i class="c_icon c_action"></i><div class="text">Debug</div></a></li>
+            <!--<li><a href="#debug"  data-role="button"   class="panel-menu-item"   ><i class="c_icon c_action"></i><div class="text">Debug</div></a></li>-->
 
         </ul>
     </div>
