Fix some styles

--- a/index.html
+++ b/index.html
@@ -174,14 +174,15 @@
 <!-- Каталог товаров Начало -->
 <div data-role="page" id="products-list" class="app-page  ui-page ui-page-theme-a ui-page-footer-fixed">
     <div data-role="header" data-position="fixed" id="header" class="jqm-header" data-tap-toggle="false" data-theme="b">
-        <a data-iconpos="notext"  class="ui-noshadow BackButton" onclick="$.mobile.back();" >
+        <a data-iconpos="notext"  class="ui-noshadow cit_panel_href BackButton" onclick="$.mobile.back();" >
             <i class="c_icon c_back" ></i>
             <span id="CatalogBack"></span>
         </a>
 
         <div class="bnt-menu-panel-right">
-
-
+            <a link="#main"  data-role="button"   class="ui-noshadow vclick_link c_icon_contr ui-btn-inline" style="height: 30px;">
+                <i class="c_icon c_home"></i>
+            </a>
         </div>
     </div>
     <div class="navPanelChild" id="nav-panel-products-list"></div>
