Add home button

--- a/index.html
+++ b/index.html
@@ -392,7 +392,9 @@
         </a>
         <h1><div class="c_main_logo"></div></h1>
         <div class="bnt-menu-panel-right">
-
+            <a link="#main"  data-role="button"   class="ui-noshadow vclick_link c_icon_contr ui-btn-inline" style="height: 30px;">
+                <i class="c_icon c_home"></i>
+            </a>
         </div>
     </div>
 
